fix:erros/spacing, grid, categories

--- a/src/styles/globals.css
+++ b/src/styles/globals.css
@@ -105,3 +105,28 @@ a {
     color-scheme: dark;
   }
 }
+
+
+@keyframes blink {
+  0% {
+      opacity: 0;
+  }
+  50% {
+      opacity: 1;
+  }
+  100% {
+      opacity: 0;
+  }
+}
+
+@keyframes glow {
+  0% {
+      box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7);
+  }
+  50% {
+      box-shadow: 0 0 0 10px rgba(255, 0, 0, 0.7);
+  }
+  100% {
+      box-shadow: 0 0 0 0 rgba(255, 0, 0, 0.7);
+  }
+}
